--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
    <link rel="stylesheet" href="css/style.css">
 
 </head>
+   
+<!--  start body   -->
 <body>
    
 <!-- header section starts  -->
